gravitee-gateway-services/gravitee-gateway-services-kubernetes/k8s-loadbalancer-spec.yml
#
# Copyright (C) 2015 The Gravitee team (http://gravitee.io)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: Service
metadata:
  name: gio-gateway-lb
spec:
  selector:
    app.kubernetes.io/component: gateway
  ports:
    - port: 82
      targetPort: 8082
  type: LoadBalancer
