gravitee-gateway-services/gravitee-gateway-services-kubernetes/k8s-ingress-spec.yml
#
# Copyright (C) 2015 The Gravitee team (http://gravitee.io)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gio-poc-ingress
  annotations:
    kubernetes.io/ingress.class: graviteeio
    gravitee.io/security-type: JWT
    gravitee.io/security-config: my-k8s-apis#jwt-poc
spec:
  rules:
    - http:
        paths:
          - path: /elasticsearch
            pathType: Prefix
            backend:
              serviceName: elastic-elasticsearch-master
              servicePort: 9200
